[gd_scene load_steps=5 format=2]

[ext_resource path="res://Audio/Abstraction - Ludum Dare Loops/Ludum Dare 30 - Track 8.wav" type="AudioStream" id=1]
[ext_resource path="res://Audio/Abstraction - Ludum Dare Loops/Ludum Dare 32 - Track 2.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Music.gd" type="Script" id=3]
[ext_resource path="res://Audio/Abstraction - Ludum Dare Loops/Ludum Dare 30 - Track 1.wav" type="AudioStream" id=4]

[node name="Music" type="Node"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="BackgroundMainMenu" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 2 )
volume_db = -60.0
bus = "Music"

[node name="Tween" type="Tween" parent="BackgroundMainMenu"]

[node name="BackgroundNormal" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -20.0
bus = "Music"

[node name="Tween" type="Tween" parent="BackgroundNormal"]

[node name="BackgroundCombat" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 1 )
volume_db = -60.0
bus = "Music"

[node name="Tween" type="Tween" parent="BackgroundCombat"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="BackgroundMainMenu/Tween" to="." method="_on_Tween_MainMenu_tween_all_completed"]
[connection signal="tween_all_completed" from="BackgroundNormal/Tween" to="." method="_on_Tween_Normal_tween_all_completed"]
[connection signal="tween_all_completed" from="BackgroundCombat/Tween" to="." method="_on_Tween_Combat_tween_all_completed"]
